@@ -1,2 +1,2 @@
-#define VERSION "1.5.0"
+#define VERSION "1.5.1"
 #define YEARS   "2005-2006"
