@@ -4,6 +4,9 @@
 using namespace std;
 
 #include "../../VERSION"
+
+#define _INCLUDED_BISONCPP_H_
+
 #include "../../usage.cc"
 
 char version[] = VERSION;
